# autorelease

./: .gitignore  .gitlab-ci.autorelease-base.yml  .gitlab-ci.yml  Changelog.rst  README.rst  gitlab-access-setup.txt  pyproject.toml  setup.cfg  tox.ini
behave4cmd0/: command_steps.py
features/: ci-cd.feature  environment.py  repo_setup.feature  semantic-release.feature  standard_version.feature  versioning.feature
features/resources/: package-lock.json  package.json
features/steps/: behave4cmd0_extension_steps.py  git_steps.py  gitlab_steps.py  nodejs_setup_steps.py  poetry_steps.py  repo_setup_steps.py  versioning.py
