[tool.poetry]
name = "autorelease"
version = "0.1.0"
description = "autorelease workflow"
license = "LGPL v2.1"
authors = [
    "Mouadh Kaabachi <mouadh.kaabachi@gmail.com>",
    "Emmanuel Sciara <emmanuel.sciara@gmail.com>"
]
readme = 'README.rst'
repository = "https://github.com/esciara/autorelease"
homepage = "https://github.com/esciara/autorelease"
keywords = ['devops', 'release']


[tool.poetry.dependencies]
python = "~3.6"  # Compatible python versions must be declared here
# Using a similar approach to `tox` (see `setup.cfg` and `tox.ini` files at https://github.com/tox-dev/tox)
# and creating extras for use in `tox.ini` instead of using [tool.poetry.dev-dependencies]
#
# Optional dependencies to be part of `testing` extra
pytest = { version = "^5.0", optional = true }
# Optional dependencies to be part of `bdd` extra
behave = { version = "^1.2", optional = true }
gitpython = { version = "^2.1", optional = true }
python-gitlab = { version = "^1.9", optional = true }
PyHamcrest = { version = "^1.9", optional = true }


[tool.poetry.dev-dependencies]
tox = "^3.13"
python-semantic-release = "^4.1"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.0"
files = [
    "pyproject.toml:version"
]


[options.extras_require]
testing = ["pytest"]
bdd = ["behave", "gitpython", "python-gitlab", "PyHamcrest"]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
